add swagger for get user/id, add tests for media-files (get all, get by id, add, remove), add tests for get user/id, add likes/add endpoint
- add swagger for get user/id
- add tests for media-files (get all, get by id, add, remove)
- add tests for get user/id
- add likes/add endpoint
