# controllers/users/getCurrent.js
@@ -5,7 +5,7 @@ const getCurrent = async (req, res) => {
 
   res.status(200).json({
     status: "succes",
-    data: { currentUser: userTransformer(user), token: user.token },
+    data: { user: userTransformer(user), token: user.token },
   });
 };
 
