# controllers/users/login.js
@@ -39,7 +39,7 @@ const login = async (req, res) => {
 
   res.status(200).json({
     status: "succes",
-    data: { currentUser: userTransformer(currentUser), token },
+    data: { user: userTransformer(currentUser), token },
   });
 };
 
