# controllers/users/remove.js
@@ -7,7 +7,7 @@ const remove = async (req, res) => {
 
   const deletedUser = await User.findOneAndDelete({ _id });
 
-  res.status(200).json({ status: "success", data: { deletedUser: userTransformer(deletedUser) } });
+  res.status(200).json({ status: "success", data: { user: userTransformer(deletedUser) } });
 };
 
 module.exports = remove;
