# routes/swagger/openapi.json
@@ -230,6 +230,56 @@
         }
       }
     },
+    "/user/{userId}": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Get user info",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "description": "User id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully get a user data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserGetUserDataResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token is invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user/logout": {
       "get": {
         "tags": ["User"],
@@ -273,6 +323,57 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/UserDeleteResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token is invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/media-files/add": {
+      "post": {
+        "tags": ["Media files"],
+        "summary": "Create a new media file",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "requestBody": {
+          "description": "Media file's object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MediaFilesCreateMediaRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully create a new media file",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MediaFilesCreateMediaResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequestResponse"
                 }
               }
             }
@@ -370,57 +471,6 @@
         }
       }
     },
-    "/media-files/add": {
-      "post": {
-        "tags": ["Media files"],
-        "summary": "Create a new media file",
-        "security": [{ "Bearer": [] }],
-        "parameters": [],
-        "requestBody": {
-          "description": "Media file's object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MediaFilesCreateMediaRequest"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successfully create a new media file",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/MediaFilesCreateMediaResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request (invalid request body)",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BadRequestResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Token is invalid",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UnauthorizedResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/media-files/remove/{mediaFileId}": {
       "delete": {
         "tags": ["Media files"],
@@ -471,36 +521,6 @@
         }
       }
     },
-    "/own-posts": {
-      "get": {
-        "tags": ["Own posts"],
-        "summary": "Get all own posts",
-        "security": [{ "Bearer": [] }],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Successfully fetch all your posts",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OwnPostsGetPostsResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Token is invalid",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UnauthorizedResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/own-posts/add": {
       "post": {
         "tags": ["Own posts"],
@@ -535,6 +555,36 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/BadRequestResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token is invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/own-posts": {
+      "get": {
+        "tags": ["Own posts"],
+        "summary": "Get all own posts",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successfully fetch all your posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OwnPostsGetPostsResponse"
                 }
               }
             }
@@ -762,7 +812,7 @@
           "data": {
             "type": "object",
             "properties": {
-              "currentUser": {
+              "user": {
                 "type": "object",
                 "properties": {
                   "_id": {
@@ -835,7 +885,7 @@
           "data": {
             "type": "object",
             "properties": {
-              "currentUser": {
+              "user": {
                 "type": "object",
                 "properties": {
                   "_id": {
@@ -871,6 +921,136 @@
           }
         }
       },
+      "UserGetUserDataResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "description": "Status",
+            "format": "string",
+            "example": "success"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "user": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "description": "User's id",
+                    "example": "642831f346155749a2b6e944"
+                  },
+                  "name": {
+                    "type": "string",
+                    "description": "User's name",
+                    "example": "Sergey Nikolayovich"
+                  },
+                  "email": {
+                    "type": "string",
+                    "description": "User's email",
+                    "format": "email"
+                  },
+                  "avatarURL": {
+                    "type": "string",
+                    "description": "User's avatar link",
+                    "example": "User's avatar link"
+                  }
+                }
+              },
+              "posts": {
+                "type": "array",
+                "description": "All your posts",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "description": {
+                      "type": "string",
+                      "description": "Post's text",
+                      "example": "My horoscope said I was going to get my heart broken in 12 years time… So I bought a puppy to cheer me up."
+                    },
+                    "likes": {
+                      "type": "array",
+                      "description": "Array of users IDs wich liked the post",
+                      "items": {
+                        "type": "string",
+                        "description": "User ID"
+                      }
+                    },
+                    "comments": {
+                      "type": "array",
+                      "description": "Array of comment IDs associated with the post",
+                      "items": {
+                        "type": "string",
+                        "description": "Comment ID"
+                      }
+                    },
+                    "mediaFiles": {
+                      "type": "array",
+                      "description": "Array of media files associated with the post",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "description": "Media file's id",
+                            "example": "6457a79b23576cf0aa13adec"
+                          },
+                          "type": {
+                            "type": "string",
+                            "description": "Media file's type",
+                            "example": "img"
+                          },
+                          "url": {
+                            "type": "string",
+                            "description": "Media file's url",
+                            "example": "https://res.cloudinary.com/dbclstp7c/image/upload/v1682247086/mnf8tsnyxfhztfemh4dq.jpg"
+                          },
+                          "providerPublicId": {
+                            "type": "string",
+                            "description": "Cloudinary id",
+                            "example": "mnf8tsnyxfhztfemh4dq"
+                          },
+                          "owner": {
+                            "type": "string",
+                            "description": "User's id",
+                            "example": "6452b1d7f6a29d84c5b089fb"
+                          },
+                          "postId": {
+                            "type": "string",
+                            "description": "Post's id",
+                            "example": "64578c032ce9cc5ad13e723a"
+                          },
+                          "postedAtHuman": {
+                            "type": "string",
+                            "description": "Post's time",
+                            "example": "43 minutes ago"
+                          }
+                        }
+                      }
+                    },
+                    "owner": {
+                      "type": "string",
+                      "description": "User's id",
+                      "example": "6452b1d7f6a29d84c5b089fb"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "description": "Post's id",
+                      "example": "642831f346155749a2b6e944"
+                    },
+                    "postedAtHuman": {
+                      "type": "string",
+                      "description": "Post's time",
+                      "example": "43 minutes ago"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "UserDeleteResponse": {
         "type": "object",
         "properties": {
@@ -883,7 +1063,7 @@
           "data": {
             "type": "object",
             "properties": {
-              "deletedUser": {
+              "user": {
                 "type": "object",
                 "properties": {
                   "_id": {
@@ -1095,7 +1275,7 @@
           "data": {
             "type": "object",
             "properties": {
-              "newMediaFile": {
+              "mediaFile": {
                 "type": "object",
                 "properties": {
                   "type": {
@@ -1236,11 +1416,46 @@
                     },
                     "mediaFiles": {
                       "type": "array",
-                      "description": "Array of media file IDs associated with the post",
+                      "description": "Array of media files associated with the post",
                       "items": {
-                        "type": "string",
-                        "description": "ID of a media file",
-                        "example": "6457a79b23576cf0aa13adec"
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "description": "Media file's id",
+                            "example": "6457a79b23576cf0aa13adec"
+                          },
+                          "type": {
+                            "type": "string",
+                            "description": "Media file's type",
+                            "example": "img"
+                          },
+                          "url": {
+                            "type": "string",
+                            "description": "Media file's url",
+                            "example": "https://res.cloudinary.com/dbclstp7c/image/upload/v1682247086/mnf8tsnyxfhztfemh4dq.jpg"
+                          },
+                          "providerPublicId": {
+                            "type": "string",
+                            "description": "Cloudinary id",
+                            "example": "mnf8tsnyxfhztfemh4dq"
+                          },
+                          "owner": {
+                            "type": "string",
+                            "description": "User's id",
+                            "example": "6452b1d7f6a29d84c5b089fb"
+                          },
+                          "postId": {
+                            "type": "string",
+                            "description": "Post's id",
+                            "example": "64578c032ce9cc5ad13e723a"
+                          },
+                          "postedAtHuman": {
+                            "type": "string",
+                            "description": "Post's time",
+                            "example": "43 minutes ago"
+                          }
+                        }
                       }
                     },
                     "owner": {
@@ -1405,11 +1620,46 @@
                   },
                   "mediaFiles": {
                     "type": "array",
-                    "description": "Array of media file IDs associated with the post",
+                    "description": "Array of media files associated with the post",
                     "items": {
-                      "type": "string",
-                      "description": "ID of a media file",
-                      "example": "6457a79b23576cf0aa13adec"
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "description": "Media file's id",
+                          "example": "6457a79b23576cf0aa13adec"
+                        },
+                        "type": {
+                          "type": "string",
+                          "description": "Media file's type",
+                          "example": "img"
+                        },
+                        "url": {
+                          "type": "string",
+                          "description": "Media file's url",
+                          "example": "https://res.cloudinary.com/dbclstp7c/image/upload/v1682247086/mnf8tsnyxfhztfemh4dq.jpg"
+                        },
+                        "providerPublicId": {
+                          "type": "string",
+                          "description": "Cloudinary id",
+                          "example": "mnf8tsnyxfhztfemh4dq"
+                        },
+                        "owner": {
+                          "type": "string",
+                          "description": "User's id",
+                          "example": "6452b1d7f6a29d84c5b089fb"
+                        },
+                        "postId": {
+                          "type": "string",
+                          "description": "Post's id",
+                          "example": "64578c032ce9cc5ad13e723a"
+                        },
+                        "postedAtHuman": {
+                          "type": "string",
+                          "description": "Post's time",
+                          "example": "43 minutes ago"
+                        }
+                      }
                     }
                   },
                   "owner": {
